--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "react-scripts": "1.0.13"
   },
   "dependencies": {
@@ -13,6 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start_server": "nodemon .\\src\\server.js --exec babel-node --presets es2015,stage-2",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
