--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start_server": "nodemon .\\src\\server.js --exec babel-node --presets es2015,stage-2",
+    "start_server": "nodemon ./src/server.js --exec babel-node --presets es2015,stage-2",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
